Fix score alignment on match overview

--- a/CoachBot.UI/src/scss/partials/_game-result.scss
+++ b/CoachBot.UI/src/scss/partials/_game-result.scss
@@ -467,7 +467,6 @@
 				@media (min-width: 992px) {
 					font-size: 28px;
 					line-height: 1.2em;
-					margin-bottom: 5px;
 				}
 			}
 			.game-result__score--sm {
